# hw_analyzer

./: .gitignore  IMPLEMENTATION.md  InstallationLog.txt  QUICKSTART.md  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  svelte.config.mjs
.svelte-kit/: ambient.d.ts
backend/: CMakeLists.txt  README.md
backend/include/: serial_interface.hpp  websocket_server.hpp
backend/src/: main.cpp  serial_interface.cpp
scripts/: build_backend.bat  build_backend.sh
src/main/: index.ts
src/renderer/: Notes.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
src/renderer-stub/: index.html
src/renderer/src/lib/: backend.ts
src/renderer/src/lib/components/: LiveChart.svelte  PortSelector.svelte  SerialConsole.svelte
src/renderer/src/routes/: +page.svelte
